<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ibow-lcd</name>
  <version>0.1.0</version>
  <description>Appearance-based Loop Closure Detection using Incremental Bags of Binary Words.</description>

  <maintainer email="emilio.garcia@uib.es">Emilio Garcia-Fidalgo</maintainer>
  <author email="emilio.garcia@uib.es">Emilio Garcia-Fidalgo</author>

  <license>GPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>Boost</depend>
  <depend>obindex2_lib</depend>

  <export>
	<build_type>ament_cmake</build_type>
  </export>
</package>
